# CryptoMarket

./: .gitignore  CMakeLists.txt  MakeFile  README.md  imgui.ini  main copy.cpp  main.cpp  maincopy.cpp  szymonmachnik.txt
0CryptoScraperOldVersion/: Makefile  main.cpp
0CryptoScraperOldVersion/crypto/: crypto.h
0CryptoScraperOldVersion/curlLib/: BUILD-MANIFEST.txt
0CryptoScraperOldVersion/edu/02 - Store HTTP response into a string/: MakeFile  main.cpp
0CryptoScraperOldVersion/handleUser/: handleUser.cpp  handleUser.h
0CryptoScraperOldVersion/tests/: main.cpp
0CryptoScraperOldVersion/user/: user.cpp
crypto/: crypto.cpp  crypto.h  listOfCryptoNames.txt
edu/01 - Send a HTTP request/: main.cpp
handleGui/: handlegui.cpp  handlegui.h
handleUser/: handleUser.cpp  handleUser.h
libs/curl/: BUILD-HASHES.txt
memory/: memory.cpp  memory.h
sql/: addRow.sql  create-transactions-db.sql
sqlite/: Makefile  database.db  main.cpp  usersCreateTable.txt
src/: main.cpp
src/crypto/: crypto.cpp  crypto.h  listOfCryptoApiIds.txt
src/handleGui/: handlegui.cpp  handlegui.h
src/memory/: memory.cpp  memory.h
src/user/: user.cpp  user.h
tests/: MakeFIle  main.cpp  szymonnnnnnnnn.txt  szymozzzzzzzzzz.txt
user/: user.cpp  user.h
